# wad-2026-llm-chat

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  REPORT.md  config.toml  config.toml.template  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  setup.cfg
app/: __main__.py  config.py  db.py  example.py  main.py
app/alembic/: env.py
app/alembic/versions/: 044d36e57547_create_users_table.py  9b3c8a4b7f21_add_github_oauth_identity_to_users.py  b5e1d2f4c3a1_add_chats_and_messages.py
app/controllers/: auth.py  chat.py
app/forms/: __init__.py  auth.py  chat.py
app/middleware/: __init__.py  auth.py
app/models/: __init__.py  chat.py  csat.py  message.py  user.py
app/repositories/: chats.py  users.py
app/schemas/: __init__.py  auth.py
app/services/: auth.py  chat.py  llm.py  redis.py  security.py
app/templates/auth/: login.html  register.html
app/templates/chat/: index.html
tests/: test_example.py  test_registration.py
